--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -22,7 +22,7 @@
             </li>
             {{ end }}
             <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
-              <a class="btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/get-started" target="_blank">
+              <a class="btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/get-started">
                 Get started
               </a>
             </li>
