--- a/themes/honestwork/layouts/_default/single.html
+++ b/themes/honestwork/layouts/_default/single.html
@@ -14,7 +14,14 @@
 <div class="container u-space-1-top u-space-2-top--md u-space-1-top--lg u-space-3-bottom">
 
   <div class="row">
-    <div class="col-lg-9 order-lg-2 mb-9 mb-lg-0">
+    <div class="col-lg-{{ if .Params.show_sub_navigation }}9{{else}}12{{end}} order-lg-2 mb-9 mb-lg-0">
+
+      <article class="row mb-7">
+        <div class="col-12">
+          {{.Params.content | markdownify}}
+        </div>
+      </article>
+
       {{ range .Params.sections}}
       <article class="row mb-7">
 
@@ -96,13 +103,58 @@
         {{end}}
 
         {{ if (eq .template "block-registration") }}
-        <!-- TODO -->
+        <div class="w-40 mx-auto">
+          <form id="blockForm" class="js-validate js-form-message" action="https://formspree.io/xjvabvek" method="POST">
+            {{ range $index, $element := .fields }}
+            <div class="form-group text-center">
+              <label class="h6 small d-block text-uppercase" for="exampleInputEmail1">{{.}}</label>
+              <input name="{{. | lower}}" type="text" class="form-control" placeholder="Enter {{. | lower}}" required />
+            </div>
+            {{end}}
+            <div class="form-group">
+              <button type="submit" class="btn btn-block btn-primary u-btn-primary transition-3d-hover">Submit</button>
+            </div>
+          </form>
+          <div id="blockFormThankYou" class="alert alert-success d-none" role="alert">
+            {{ .thank_you_message }}
+          </div>
+          <div id="blockFormError" class="alert alert-danger d-none" role="alert">
+            An error occurred, please try again
+          </div>
+          <script type="text/javascript">
+            function submit(ev) {
+              ev.preventDefault();
+              $('#blockFormError').addClass('d-none');
+              const form = ev.target;
+              const data = new FormData(form);
+              const xhr = new XMLHttpRequest();
+              xhr.open(form.method, form.action);
+              xhr.setRequestHeader("Accept", "application/json");
+              xhr.onreadystatechange = () => {
+                if (xhr.readyState !== XMLHttpRequest.DONE) {
+                  return;
+                }
+                if (xhr.status === 200) {
+                  $('#blockForm').hide();
+                  $('#blockFormThankYou').removeClass('d-none');
+                } else {
+                  $('#blockFormError').removeClass('d-none');
+                }
+              };
+              xhr.send(data);
+            }
+            const form = document.getElementById('blockForm');
+            form.onsubmit = submit;
+          </script>
+        </div>
         {{end}}
 
       </article>
       {{ end }}
       <div class="u-space-2-bottom"></div>
     </div>
+
+    {{ if .Params.show_sub_navigation }}
     <div id="stickyBlockStartPoint" class="col-lg-3 order-lg-1">
       <div class="js-sticky-block" data-has-sticky-header="true" data-offset-target="#logoAndNav" data-sticky-view="lg"
         data-start-point="#stickyBlockStartPoint" data-end-point="#stickyBlockEndPoint" data-offset-top="32"
@@ -142,6 +194,8 @@
         </ul>
       </div>
     </div>
+    {{end}}
+
   </div>
 </div>
 
