--- a/themes/honestwork/layouts/partials/head.html
+++ b/themes/honestwork/layouts/partials/head.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <link rel="shortcut icon" href="/favicon.ico">
+  <link rel="shortcut icon" href="/favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
   <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/assets/vendor/font-awesome/css/fontawesome-all.min.css">
