homepage button fix

--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -10,8 +10,7 @@
     <div class="w-lg-50 mx-auto mb-5">
       <h2 class="display-5 font-size-32--md-down text-white font-weight-bold">{{.Params.hero_sub_title}}</h1>
     </div>
-    <a class="js-go-to btn text-primary u-btn-white u-btn-wide transition-3d-hover" href="/get-started"
-      data-target="#shopItemsContent" data-type="static">
+    <a class="btn text-primary u-btn-white u-btn-wide transition-3d-hover" href="/get-started">
       Get started
     </a>
   </div>
