--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -70,6 +70,7 @@
 <script src="/assets/js/components/hs.show-animation.js"></script>
 <script src="/assets/js/components/hs.scroll-nav.js"></script>
 <script src="/assets/js/components/hs.go-to.js"></script>
+<script src="/main.js"></script>
 
 <script>
   $(window).on('load', function () {
