--- a/static/assets/css/front-core.css
+++ b/static/assets/css/front-core.css
@@ -24,23 +24,57 @@ p {
   line-height: 1.7;
 }
 
-h4, h5, h6,
-.h4, .h5, .h6 {
+h4,
+h5,
+h6,
+.h4,
+.h5,
+.h6 {
   font-weight: 500;
 }
 
-h1 > a, h2 > a, h3 > a, h4 > a, h5 > a, h6 > a,
-.h1 > a, .h2 > a, .h3 > a, .h4 > a, .h5 > a, .h6 > a {
+h1 > a,
+h2 > a,
+h3 > a,
+h4 > a,
+h5 > a,
+h6 > a,
+.h1 > a,
+.h2 > a,
+.h3 > a,
+.h4 > a,
+.h5 > a,
+.h6 > a {
   color: #1e2022;
 }
 
-h1 > a:hover, h2 > a:hover, h3 > a:hover, h4 > a:hover, h5 > a:hover, h6 > a:hover,
-.h1 > a:hover, .h2 > a:hover, .h3 > a:hover, .h4 > a:hover, .h5 > a:hover, .h6 > a:hover {
-  color: #1164ff;
+h1 > a:hover,
+h2 > a:hover,
+h3 > a:hover,
+h4 > a:hover,
+h5 > a:hover,
+h6 > a:hover,
+.h1 > a:hover,
+.h2 > a:hover,
+.h3 > a:hover,
+.h4 > a:hover,
+.h5 > a:hover,
+.h6 > a:hover {
+  color: #42b9f4;
 }
 
-h1.text-white > a, h2.text-white > a, h3.text-white > a, h4.text-white > a, h5.text-white > a, h6.text-white > a,
-.h1.text-white > a, .h2.text-white > a, .h3.text-white > a, .h4.text-white > a, .h5.text-white > a, .h6.text-white > a {
+h1.text-white > a,
+h2.text-white > a,
+h3.text-white > a,
+h4.text-white > a,
+h5.text-white > a,
+h6.text-white > a,
+.h1.text-white > a,
+.h2.text-white > a,
+.h3.text-white > a,
+.h4.text-white > a,
+.h5.text-white > a,
+.h6.text-white > a {
   color: #fff;
 }
 
@@ -57,20 +91,20 @@ svg {
 ------------------------------------*/
 ::-moz-selection {
   color: #fff;
-  background-color: #377dff;
+  background-color: #42b9f4;
 }
 
 ::selection {
   color: #fff;
-  background-color: #377dff;
+  background-color: #42b9f4;
 }
 
 .bg-primary ::-moz-selection {
-  color: #377dff;
+  color: #42b9f4;
   background-color: #fff;
 }
 
 .bg-primary ::selection {
-  color: #377dff;
+  color: #42b9f4;
   background-color: #fff;
 }
