--- a/themes/honestwork/layouts/_default/single.html
+++ b/themes/honestwork/layouts/_default/single.html
@@ -49,7 +49,7 @@
 
         {{ if (eq .template "block-image") }}
         <div class="col-12 {{.template}}">
-          <img src="{{.image}}" class="img-fluid w-100 rounded" alt="{{.Params.title}}">
+          <img src="{{.image}}" class="img-fluid" alt="{{.Params.title}}">
         </div>
         {{end}}
 
@@ -84,7 +84,7 @@
           <div id="basics">
             {{ with .title}}
             <div class="mb-3">
-              <h3 class="text-primary font-weight-bold">{{.}}</h3>
+              <h3>{{.}}</h3>
             </div>
             {{end}}
             <div id="basicsAccordion-{{$sectionNumber}}">
