--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -51,21 +51,21 @@
 <script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
 
 <script src="/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-<script src="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
-<script src="/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
-<script src="/assets/vendor/typed.js/lib/typed.min.js"></script>
-<script src="/assets/vendor/slick-carousel/slick/slick.js"></script>
+<!-- <script src="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script> -->
+<!-- <script src="/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script> -->
+<!-- <script src="/assets/vendor/fancybox/jquery.fancybox.min.js"></script> -->
+<!-- <script src="/assets/vendor/typed.js/lib/typed.min.js"></script> -->
+<!-- <script src="/assets/vendor/slick-carousel/slick/slick.js"></script> -->
 <script src="/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
 
 <script src="/assets/js/hs.core.js"></script>
 <script src="/assets/js/components/hs.header.js"></script>
 <script src="/assets/js/components/hs.unfold.js"></script>
 <script src="/assets/js/helpers/hs.focus-state.js"></script>
-<script src="/assets/js/components/hs.malihu-scrollbar.js"></script>
-<script src="/assets/js/components/hs.validation.js"></script>
-<script src="/assets/js/components/hs.fancybox.js"></script>
-<script src="/assets/js/components/hs.slick-carousel.js"></script>
+<!-- <script src="/assets/js/components/hs.malihu-scrollbar.js"></script> -->
+<!-- <script src="/assets/js/components/hs.validation.js"></script> -->
+<!-- <script src="/assets/js/components/hs.fancybox.js"></script> -->
+<!-- <script src="/assets/js/components/hs.slick-carousel.js"></script> -->
 <script src="/assets/js/components/hs.sticky-block.js"></script>
 <script src="/assets/js/components/hs.show-animation.js"></script>
 <script src="/assets/js/components/hs.scroll-nav.js"></script>
