--- a/themes/honestwork/layouts/partials/head.html
+++ b/themes/honestwork/layouts/partials/head.html
@@ -1,4 +1,5 @@
 <head>
+  {{with .Params.password_protected}}
   <script>
     function getCookie(name) {
       var v = document.cookie.match('(^|;) ?' + name + '=([^;]*)(;|$)');
@@ -17,11 +18,12 @@
       if (password === 'emmet2020') {
         setCookie('honestwork', true, 7);
       } else {
-        window.location = '/unathorised';
+        window.location = '/unauthorised';
       }
     }
   </script>
-  <title>Honest Work</title>
+  {{end}}
+  <title>Honest Work {{.Params.password_protected}}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -30,7 +32,7 @@
   <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.css">
   <link rel="stylesheet" href="/assets/vendor/font-awesome/css/fontawesome-all.min.css">
   <link rel="stylesheet" href="/assets/vendor/animate.css/animate.min.css">
-  <!-- <link rel="stylesheet" href="/assets/vendor/hs-megamenu/src/hs.megamenu.css"> -->
+  <link rel="stylesheet" href="/assets/vendor/hs-megamenu/src/hs.megamenu.css">
   <link rel="stylesheet" href="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
   <link rel="stylesheet" href="/assets/vendor/fancybox/jquery.fancybox.css">
   <link rel="stylesheet" href="/assets/vendor/slick-carousel/slick/slick.css">
