subscription form update

--- a/themes/honestwork/layouts/_default/single.html
+++ b/themes/honestwork/layouts/_default/single.html
@@ -156,6 +156,7 @@
               $('#blockFormError').addClass('d-none');
               const form = ev.target;
               const data = new FormData(form);
+              data.append('form', 'registration');
               const xhr = new XMLHttpRequest();
               xhr.open(form.method, form.action);
               xhr.setRequestHeader("Accept", "application/json");
