--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -3,7 +3,9 @@
     {{ range .Site.Menus.footer }}
     <div class="col-6 col-sm-4 col-lg-2 mb-7 mb-lg-0">
       <h3 class="h6">
-        <strong>{{ .Name }}</strong>
+        <a href="{{ .URL }}">
+          <strong>{{ .Name }}</strong>
+        </a>
       </h3>
       {{ if .HasChildren }}
       <ul class="list-unstyled u-list">
@@ -22,8 +24,11 @@
           <strong>Get latest news in your box!</strong>
         </h3>
         <p class="font-size-14">Get special offers and deals. Never spam.</p>
+        <h3 id="subscribeThankYou" class="h6" style="display:none; color: darkolivegreen;">
+          <strong>Subscription complete!</strong>
+        </h3>
       </div>
-      <form class="js-validate js-form-message">
+      <form id="subscribeform" class="js-validate js-form-message" action="https://formspree.io/xjvabvek" method="POST">
         <div class="js-focus-state input-group u-form">
           <input type="email" class="form-control u-form__input" name="email" required
             placeholder="Enter your email address" aria-label="Enter your email address" />
@@ -32,6 +37,27 @@
           </span>
         </div>
       </form>
+      <script type="text/javascript">
+        function subscribeformSubmit(ev) {
+          ev.preventDefault();
+          const form = ev.target;
+          const data = new FormData(form);
+          data.append('form', 'subscribe');
+          const xhr = new XMLHttpRequest();
+          xhr.open(form.method, form.action);
+          xhr.setRequestHeader("Accept", "application/json");
+          xhr.onreadystatechange = () => {
+            if (xhr.readyState !== XMLHttpRequest.DONE) {
+              return;
+            }
+            document.getElementById('subscribeform').remove();
+            document.getElementById('subscribeThankYou').style.display = 'block';
+          };
+          xhr.send(data);
+        }
+        const form = document.getElementById('subscribeform');
+        form.onsubmit = subscribeformSubmit;
+      </script>
     </div>
   </div>
   <hr class="my-0" />
@@ -51,21 +77,21 @@
 <script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
 
 <script src="/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
-<!-- <script src="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script> -->
-<!-- <script src="/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script> -->
-<!-- <script src="/assets/vendor/fancybox/jquery.fancybox.min.js"></script> -->
-<!-- <script src="/assets/vendor/typed.js/lib/typed.min.js"></script> -->
-<!-- <script src="/assets/vendor/slick-carousel/slick/slick.js"></script> -->
+<script src="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.concat.min.js"></script>
+<script src="/assets/vendor/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="/assets/vendor/typed.js/lib/typed.min.js"></script>
+<script src="/assets/vendor/slick-carousel/slick/slick.js"></script>
 <script src="/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
 
 <script src="/assets/js/hs.core.js"></script>
 <script src="/assets/js/components/hs.header.js"></script>
 <script src="/assets/js/components/hs.unfold.js"></script>
 <script src="/assets/js/helpers/hs.focus-state.js"></script>
-<!-- <script src="/assets/js/components/hs.malihu-scrollbar.js"></script> -->
-<!-- <script src="/assets/js/components/hs.validation.js"></script> -->
-<!-- <script src="/assets/js/components/hs.fancybox.js"></script> -->
-<!-- <script src="/assets/js/components/hs.slick-carousel.js"></script> -->
+<script src="/assets/js/components/hs.malihu-scrollbar.js"></script>
+<script src="/assets/js/components/hs.validation.js"></script>
+<script src="/assets/js/components/hs.fancybox.js"></script>
+<script src="/assets/js/components/hs.slick-carousel.js"></script>
 <script src="/assets/js/components/hs.sticky-block.js"></script>
 <script src="/assets/js/components/hs.show-animation.js"></script>
 <script src="/assets/js/components/hs.scroll-nav.js"></script>
