update homepage text

--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -10,17 +10,26 @@
           <img src="/logo.png" alt="Honest Work" width="300" />
         </div>
         <div class="col-12 container text-center u-space-1">
-          <p>About Honest Work here...</p>
+          <p>
+            Workers around the world want to work for companies that do right by people and planet. Honest Work is a
+            platform that will help these workers find each other and change their companies together.
+          </p>
+          <p>
+            The platform will be launched in mid 2020; sign up for updates via the subscription box below.
+          </p>
+          <p>
+            For enquiries, contact <a href="mailto:emmet@honestwork.org">emmet@honestwork.org</a>
+          </p>
         </div>
         <div class="col-12 container text-center u-space-1">
           <div class="col-6 mx-auto">
             <div class="mb-4">
               <h3 class="h6">
-                <strong>Get latest news in your box!</strong>
+                <strong>HonestWork updates</strong>
               </h3>
-              <p class="font-size-14">Get special offers and deals. Never spam.</p>
+              <p class="font-size-14">Sign up for news straight to your inbox</p>
               <h3 id="subscribeThankYou" class="h6" style="display:none; color: darkolivegreen;">
-                <strong>Subscription complete!</strong>
+                <strong>Subscription complete</strong>
               </h3>
             </div>
             <form id="subscribeform" class="js-validate js-form-message" action="https://formspree.io/xjvabvek"
