--- a/themes/honestwork/layouts/partials/head.html
+++ b/themes/honestwork/layouts/partials/head.html
@@ -23,7 +23,8 @@
     }
   </script>
   {{end}}
-  <title>Honest Work {{.Params.password_protected}}</title>
+  <!-- <title>Honest Work{{if .Params.title}} - {{.Params.title}}{{end}}</title> -->
+  <title>Honest Work</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
