homepage text update

--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -15,7 +15,7 @@
             platform that will help these workers find each other and change their companies together.
           </p>
           <p>
-            The platform will be launched in mid 2020; sign up for updates via the subscription box below.
+            The platform will be launched in late 2020; sign up for updates via the subscription box below.
           </p>
           <p>
             For enquiries, contact <a href="mailto:emmet@honestwork.org">emmet@honestwork.org</a>
