--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="u-header__section">
     <div id="logoAndNav" class="container">
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar">
-        <a class="navbar-brand u-header__navbar-brand" href="/" aria-label="Front">
+        <a class="navbar-brand u-header__navbar-brand" href="/homepage" aria-label="Front">
           <img src="/logo.png" alt="Honest Work" width="150" />
         </a>
         <button type="button" class="navbar-toggler btn u-hamburger" aria-label="Toggle navigation"
