--- a/themes/honestwork/layouts/partials/head.html
+++ b/themes/honestwork/layouts/partials/head.html
@@ -29,14 +29,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="shortcut icon" href="/favicon.png">
-  <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600" rel="stylesheet">
-  <link rel="stylesheet" href="/assets/vendor/bootstrap/css/bootstrap.css">
-  <link rel="stylesheet" href="/assets/vendor/font-awesome/css/fontawesome-all.min.css">
-  <link rel="stylesheet" href="/assets/vendor/animate.css/animate.min.css">
-  <link rel="stylesheet" href="/assets/vendor/hs-megamenu/src/hs.megamenu.css">
-  <link rel="stylesheet" href="/assets/vendor/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.css">
-  <link rel="stylesheet" href="/assets/vendor/fancybox/jquery.fancybox.css">
-  <link rel="stylesheet" href="/assets/vendor/slick-carousel/slick/slick.css">
-  <link rel="stylesheet" href="/assets/vendor/dzsparallaxer/dzsparallaxer.css">
-  <link rel="stylesheet" href="/assets/css/front.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600">
+  <link rel="stylesheet" href="/assets/css/vendor.css">
+  <link rel="stylesheet" href="/assets/css/honestwork.css">
 </head>
