--- a/themes/honestwork/layouts/partials/footer.html
+++ b/themes/honestwork/layouts/partials/footer.html
@@ -71,12 +71,55 @@
   <span class="fa fa-arrow-up u-go-to__inner"></span>
 </a>
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-  integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-  integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-  integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<script src="/assets/vendor/jquery/dist/jquery.min.js"></script>
+<script src="/assets/vendor/jquery-migrate/dist/jquery-migrate.min.js"></script>
+<script src="/assets/vendor/popper.js/dist/umd/popper.min.js"></script>
+<script src="/assets/vendor/bootstrap/bootstrap.min.js"></script>
 
-<script src="/vendor.js"></script>
+<script src="/assets/vendor/hs-megamenu/src/hs.megamenu.js"></script>
+<script src="/assets/vendor/fancybox/jquery.fancybox.min.js"></script>
+<script src="/assets/vendor/slick-carousel/slick/slick.js"></script>
+<script src="/assets/vendor/dzsparallaxer/dzsparallaxer.js"></script>
+
+<script src="/assets/js/hs.core.js"></script>
+<script src="/assets/js/components/hs.header.js"></script>
+<script src="/assets/js/components/hs.unfold.js"></script>
+<script src="/assets/js/helpers/hs.focus-state.js"></script>
+<script src="/assets/js/components/hs.fancybox.js"></script>
+<script src="/assets/js/components/hs.slick-carousel.js"></script>
+<script src="/assets/js/components/hs.sticky-block.js"></script>
+<script src="/assets/js/components/hs.show-animation.js"></script>
+<script src="/assets/js/components/hs.scroll-nav.js"></script>
+<script src="/assets/js/components/hs.go-to.js"></script>
 <script src="/main.js"></script>
+
+<script>
+  $(window).on('load', function () {
+  });
+
+  $(document).on('ready', function () {
+    // initialization of header
+    $.HSCore.components.HSHeader.init($('#header'));
+
+    // initialization of malihu scrollbar
+    $.HSCore.components.HSMalihuScrollBar.init($('.js-scrollbar'));
+
+    // initialization of forms
+    $.HSCore.helpers.HSFocusState.init();
+
+    // initialization of show animations
+    $.HSCore.components.HSShowAnimation.init('.js-animation-link');
+
+    // initialization of sticky blocks
+    setTimeout(function () {
+      $.HSCore.components.HSStickyBlock.init('.js-sticky-block');
+    }, 300);
+
+    // initialization of go to
+    $.HSCore.components.HSGoTo.init('.js-go-to');
+    // initialization of HSScrollNav component
+    $.HSCore.components.HSScrollNav.init($('#scrollNav'), {
+      duration: 700
+    });
+  });
+</script>
