--- a/themes/honestwork/layouts/index.html
+++ b/themes/honestwork/layouts/index.html
@@ -13,6 +13,9 @@
     <a class="btn text-primary u-btn-white u-btn-wide transition-3d-hover" href="/get-started">
       Get started
     </a>
+    <a class="btn text-primary u-btn-white u-btn-wide transition-3d-hover" href="/join">
+      Join
+    </a>
   </div>
 </div>
 {{ end }}
