--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -22,6 +22,11 @@
             </li>
             {{ end }}
             <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
+              <a class="btn btn-sm btn-secondary u-btn-secondary transition-3d-hover" href="/donate">
+                Donate
+              </a>
+            </li>
+            <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
               <a class="btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">
                 Join
               </a>
