--- a/themes/honestwork/layouts/_default/single.html
+++ b/themes/honestwork/layouts/_default/single.html
@@ -19,7 +19,7 @@
 <div class="container u-space-1-top u-space-2-top--md u-space-1-top--lg u-space-3-bottom">
 
   <div class="row">
-    <div class="col-lg-{{ if .Params.show_sub_navigation }}9{{else}}12{{end}} order-lg-2 mb-9 mb-lg-0">
+    <div class="col-lg-{{ if .Params.show_sub_navigation }}9{{else}}12{{end}} text-{{.Params.text_alignment}} order-lg-2 mb-9 mb-lg-0">
 
       {{ if .Params.content }}
       <article class="row mb-4">
