--- a/themes/honestwork/layouts/partials/head.html
+++ b/themes/honestwork/layouts/partials/head.html
@@ -18,7 +18,7 @@
       if (password === 'honestworkfriend') {
         setCookie('honestwork', true, 7);
       } else {
-        window.location = '/unauthorised';
+        window.location = '/coming-soon';
       }
     }
   </script>
