--- a/themes/honestwork/layouts/partials/header.html
+++ b/themes/honestwork/layouts/partials/header.html
@@ -2,7 +2,7 @@
   <div class="u-header__section">
     <div id="logoAndNav" class="container">
       <nav class="js-mega-menu navbar navbar-expand-md u-header__navbar">
-        <a class="navbar-brand u-header__navbar-brand" href="/homepage" aria-label="Front">
+        <a class="navbar-brand u-header__navbar-brand" href="/" aria-label="Front">
           <img src="/logo.png" alt="Honest Work" width="150" />
         </a>
         <button type="button" class="navbar-toggler btn u-hamburger" aria-label="Toggle navigation"
@@ -21,12 +21,12 @@
               </a>
             </li>
             {{ end }}
-            <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
+            <li class="nav-item d-md-inline-block pl-3 pr-0">
               <a class="btn btn-sm btn-secondary u-btn-secondary transition-3d-hover" href="/donate">
                 Donate
               </a>
             </li>
-            <li class="nav-item d-none d-md-inline-block pl-3 pr-0">
+            <li class="nav-item d-md-inline-block pl-3 pr-0">
               <a class="btn btn-sm btn-primary u-btn-primary transition-3d-hover" href="/join">
                 Join
               </a>
